// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded approved role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  flex: 1;
}

.c18 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c19 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #00BFA6;
  border-radius: 50%;
}

.c23 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c28 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c30 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c31 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c34 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
}

.c40 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 60px;
}

.c15:hover,
.c15:focus {
  background: rgba(255,255,255,0.07);
}

.c15:active {
  background: rgba(255,255,255,0.13);
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c29 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 24px;
}

.c29:hover,
.c29:focus {
  background: #B29DFF;
}

.c29:active {
  background: #C5B6FF;
}

.c29:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c20 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c22 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c26 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c33 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c37 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c41 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c11 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #00BFA6;
  color: #000000;
  font-size: 10px;
}

.c38 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #00BFA6;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c39 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c25 {
  display: flex;
  align-items: baseline;
}

.c35 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c16 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c5 {
  background: #344179;
}

.c36 {
  background: rgba(255,255,255,0.07);
}

.c32 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              font-size="0"
              font-weight="bold"
              kind="success"
              style="font-weight: bold;"
            >
              APPROVED
            </span>
            <div
              class="c0 c8"
            >
              <div
                class="c9"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c10"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c0"
              >
                <div
                  class="c11"
                  kind="secondary"
                >
                  admin
                </div>
                <div
                  class="c11"
                  kind="secondary"
                >
                  kaco
                </div>
                <div
                  class="c11"
                  kind="secondary"
                >
                  ziuzzow
                </div>
              </div>
              <div
                class="c12"
              >
                for 
                5 days
                , starting 
                12/01/2020 at 12:00AM
              </div>
            </div>
          </div>
          <div
            class="c13 c14"
          >
            <button
              class="c15"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c16"
          style="position: relative;"
        >
          <div
            class="c17"
          />
          <div
            class="c18 c6"
            style="position: relative;"
          >
            <div
              class="c19"
              style="display: flex;"
            >
              <span
                class="c20 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c0"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                2 hours ago
              </span>
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c18 c6"
              style="position: relative;"
            >
              <div
                class="c21"
                style="display: flex;"
              >
                <span
                  class="c22 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c0"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  approved
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c23"
              style="position: relative;"
            >
              <div
                class="c24 c25"
              >
                <div
                  class="c26"
                >
                  alice
                </div>
                <div
                  class="c27"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c28"
              >
                Approving for developer role not admin. Admins access is not needed for this request.
              </div>
            </div>
            <div
              class="c18 c6"
              style="position: relative;"
            >
              <div
                class="c21"
                style="display: flex;"
              >
                <span
                  class="c22 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c0"
              >
                <b>
                  test-long-user-name@testing.com
                </b>
                 
                <span>
                  approved
                   this request 
                  1 minute ago
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <button
        class="c29"
        kind="primary"
      >
        Assume Roles
      </button>
    </div>
    <div
      class="c30"
    >
      <div
        class="c31 c1 c32"
      >
        <div
          class="c33"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c38"
          font-size="0"
          font-weight="bold"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c39"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34 c35 c36"
      >
        <div
          class="c37"
          style="white-space: nowrap; max-width: 200px;"
          title="test-long-user-name@testing.com"
        >
          test-long-user-name@testing.com
        </div>
        <span
          class="c38"
          font-size="0"
          font-weight="bold"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c40"
      >
        <div
          class="c41"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded denied role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  flex: 1;
}

.c18 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c19 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c22 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c27 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #FF6257;
  border-radius: 50%;
}

.c29 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c30 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c33 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
}

.c39 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c15 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 60px;
}

.c15:hover,
.c15:focus {
  background: rgba(255,255,255,0.07);
}

.c15:active {
  background: rgba(255,255,255,0.13);
}

.c15:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c20 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c28 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c32 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c36 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c40 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c11 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FF6257;
  color: #000000;
  font-size: 10px;
}

.c37 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FF6257;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c38 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c23 {
  display: flex;
  align-items: baseline;
}

.c34 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c17 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c16 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c5 {
  background: #344179;
}

.c35 {
  background: rgba(255,255,255,0.07);
}

.c31 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              font-size="0"
              font-weight="bold"
              kind="danger"
              style="font-weight: bold;"
            >
              DENIED
            </span>
            <div
              class="c0 c8"
            >
              <div
                class="c9"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c10"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c0"
              >
                <div
                  class="c11"
                  kind="secondary"
                >
                  admin
                </div>
                <div
                  class="c11"
                  kind="secondary"
                >
                  ruhh
                </div>
              </div>
              <div
                class="c12"
              >
                for 
                4 days
                , starting 
                12/02/2020 at 12:00AM
              </div>
            </div>
          </div>
          <div
            class="c13 c14"
          >
            <button
              class="c15"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c16"
          style="position: relative;"
        >
          <div
            class="c17"
          />
          <div
            class="c18 c6"
            style="position: relative;"
          >
            <div
              class="c19"
              style="display: flex;"
            >
              <span
                class="c20 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c0"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                35 minutes ago
              </span>
            </div>
          </div>
          <div
            class="c21"
            style="position: relative;"
          >
            <div
              class="c22 c23"
            >
              <div
                class="c24"
              >
                Sam
              </div>
              <div
                class="c25"
              >
                35 minutes ago
              </div>
            </div>
            <div
              class="c26"
            >
              Some short request reason
            </div>
          </div>
          <div
            class="c0"
          >
            <div
              class="c18 c6"
              style="position: relative;"
            >
              <div
                class="c27"
                style="display: flex;"
              >
                <span
                  class="c28 icon icon-circlecross"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M15.5303 8.46967C15.8232 8.76256 15.8232 9.23744 15.5303 9.53033L13.0607 12L15.5303 14.4697C15.8232 14.7626 15.8232 15.2374 15.5303 15.5303C15.2374 15.8232 14.7626 15.8232 14.4697 15.5303L12 13.0607L9.53033 15.5303C9.23744 15.8232 8.76256 15.8232 8.46967 15.5303C8.17678 15.2374 8.17678 14.7626 8.46967 14.4697L10.9393 12L8.46967 9.53033C8.17678 9.23744 8.17678 8.76256 8.46967 8.46967C8.76256 8.17678 9.23744 8.17678 9.53033 8.46967L12 10.9393L14.4697 8.46967C14.7626 8.17678 15.2374 8.17678 15.5303 8.46967Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c0"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  denied
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c21"
              style="position: relative;"
            >
              <div
                class="c22 c23"
              >
                <div
                  class="c24"
                >
                  alice
                </div>
                <div
                  class="c25"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c26"
              >
                Not today
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c29"
    >
      <div
        class="c30 c1 c31"
      >
        <div
          class="c32"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c33 c34 c35"
      >
        <div
          class="c36"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c37"
          font-size="0"
          font-weight="bold"
          kind="danger"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c33 c34 c35"
      >
        <div
          class="c36"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c38"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c39"
      >
        <div
          class="c40"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending role based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  flex: 1;
}

.c21 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c22 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c24 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c25 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c30 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c32 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c40 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c45 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c46 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c49 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
}

.c54 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 60px;
}

.c18:hover,
.c18:focus {
  background: rgba(255,255,255,0.07);
}

.c18:active {
  background: rgba(255,255,255,0.13);
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c44 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c44:hover,
.c44:focus {
  background: #B29DFF;
}

.c44:active {
  background: #C5B6FF;
}

.c44:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 10px;
  margin: 0px;
  margin-left: 4px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c31 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c39 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c48 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c52 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c55 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c11 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c41 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
  font-size: 10px;
}

.c53 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c26 {
  display: flex;
  align-items: baseline;
}

.c33 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c50 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c42 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c42::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c42:hover,
.c42:focus,
.c42:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c42:read-only {
  cursor: not-allowed;
}

.c42:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c34 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c37 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c35 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c36 {
  opacity: 1;
}

.c38 {
  opacity: 0.5;
}

.c43 {
  font-size: 14px;
  min-height: 100px;
}

.c20 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c19 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c16 {
  font-style: italic;
}

.c17 {
  line-height: normal;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c5 {
  background: #344179;
}

.c51 {
  background: rgba(255,255,255,0.07);
}

.c47 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              font-size="0"
              font-weight="bold"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <div
              class="c0 c8"
            >
              <div
                class="c9"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c10"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c0"
              >
                <div
                  class="c11"
                  kind="secondary"
                >
                  admin
                </div>
              </div>
              <div
                class="c12"
              >
                for 
                1 day
                , starting 
                12/05/2020 at 12:00AM
              </div>
            </div>
          </div>
          <div
            class="c13 c14"
          >
            <div
              class="c15 c16 c17"
              font-size="0"
            >
              Request expires in 
              2 hours
            </div>
            <button
              class="c18"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c19"
          style="position: relative;"
        >
          <div
            class="c20"
          />
          <div
            class="c21 c6"
            style="position: relative;"
          >
            <div
              class="c22"
              style="display: flex;"
            >
              <span
                class="c23 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c0"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c24"
            style="position: relative;"
          >
            <div
              class="c25 c26"
            >
              <div
                class="c27"
              >
                Sam
              </div>
              <div
                class="c28"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c29"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
          </div>
          <div
            class="c30"
            style="position: relative;"
          >
            <div
              class="c25"
            >
              <div
                class="c31"
              >
                loggedInUsername
                 - add a review
              </div>
            </div>
            <div
              class="c29"
            >
              <div
                class="c32 c33"
              >
                <label
                  class="c34"
                >
                  <input
                    checked=""
                    class="c35"
                    name="DENIED"
                    type="radio"
                    value="DENIED"
                  />
                  <span
                    class="c36"
                  >
                    Reject request
                  </span>
                </label>
                <label
                  class="c34"
                >
                  <input
                    class="c35"
                    name="APPROVED"
                    type="radio"
                    value="APPROVED"
                  />
                  <span
                    class="c36"
                  >
                    Approve short-term access
                     (1 day)
                  </span>
                </label>
                <label
                  class="c37"
                >
                  <input
                    class="c35"
                    disabled=""
                    name="PROMOTED"
                    type="radio"
                    value="PROMOTED"
                  />
                  <span
                    class="c38"
                  >
                    <div
                      class="c0 c1"
                    >
                      <div
                        class="c0 c6"
                      >
                        <div
                          class="c39"
                        >
                          Approve long-term access via Access List with the requested resources
                        </div>
                      </div>
                    </div>
                  </span>
                </label>
              </div>
              <div
                class="c40"
              >
                <label
                  class="c41"
                  font-size="0"
                >
                  Message
                  <textarea
                    autocomplete="off"
                    class="c42 c43"
                    placeholder="Optional message..."
                  />
                </label>
              </div>
              <button
                class="c44"
                kind="primary"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c45"
    >
      <div
        class="c46 c1 c47"
      >
        <div
          class="c48"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c49 c50 c51"
      >
        <div
          class="c52"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c53"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c49 c50 c51"
      >
        <div
          class="c52"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c53"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c54"
      >
        <div
          class="c55"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending search based request state 1`] = `
.c0 {
  box-sizing: border-box;
}

.c2 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c4 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
}

.c13 {
  box-sizing: border-box;
  flex: 1;
}

.c21 {
  box-sizing: border-box;
  padding-top: 16px;
}

.c22 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c24 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c25 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c30 {
  box-sizing: border-box;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 0px;
  padding-top: 0px;
  background-color: #344179;
}

.c34 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c36 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c44 {
  box-sizing: border-box;
  max-width: 500px;
  margin-bottom: 24px;
}

.c49 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c50 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
}

.c53 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
}

.c58 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c18 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 60px;
}

.c18:hover,
.c18:focus {
  background: rgba(255,255,255,0.07);
}

.c18:active {
  background: rgba(255,255,255,0.13);
}

.c18:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c48 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c48:hover,
.c48:focus {
  background: #B29DFF;
}

.c48:active {
  background: #C5B6FF;
}

.c48:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c23 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c12 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c15 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 10px;
  margin: 0px;
  margin-left: 4px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c35 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c43 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c52 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c56 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c59 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c11 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c45 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 0px;
}

.c7 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
  font-size: 10px;
}

.c57 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c1 {
  display: flex;
}

.c6 {
  display: flex;
  align-items: center;
}

.c8 {
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c14 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
  gap: 8px;
}

.c26 {
  display: flex;
  align-items: baseline;
}

.c37 {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c54 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c46 {
  appearance: none;
  border: 1px solid rgba(255,255,255,0.54);
  border-radius: 4px;
  box-sizing: border-box;
  min-height: 50px;
  height: 80px;
  font-size: 16px;
  padding: 16px;
  outline: none;
  width: 100%;
  color: #FFFFFF;
  background: inherit;
  margin-top: 4px;
  resize: vertical;
}

.c46::placeholder {
  color: rgba(255,255,255,0.54);
  opacity: 1;
}

.c46:hover,
.c46:focus,
.c46:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c46:read-only {
  cursor: not-allowed;
}

.c46:disabled {
  color: rgba(255,255,255,0.36);
  border-color: rgba(255,255,255,0.36);
}

.c32 {
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c32 > thead > tr > th,
.c32 > tbody > tr > th,
.c32 > tfoot > tr > th,
.c32 > thead > tr > td,
.c32 > tbody > tr > td,
.c32 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c32 > thead > tr > th:first-child,
.c32 > tbody > tr > th:first-child,
.c32 > tfoot > tr > th:first-child,
.c32 > thead > tr > td:first-child,
.c32 > tbody > tr > td:first-child,
.c32 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c32 > thead > tr > th:last-child,
.c32 > tbody > tr > th:last-child,
.c32 > tfoot > tr > th:last-child,
.c32 > thead > tr > td:last-child,
.c32 > tbody > tr > td:last-child,
.c32 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c32 > tbody > tr > td {
  vertical-align: middle;
}

.c32 > thead > tr > th {
  color: #FFFFFF;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  cursor: pointer;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  white-space: nowrap;
}

.c32 > thead > tr > th svg {
  height: 12px;
}

.c32 > tbody > tr > td {
  color: #FFFFFF;
  font-weight: 300;
  font-size: 14px;
  line-height: 20px;
  letter-spacing: 0.035px;
}

.c32 tbody tr {
  transition: all 150ms;
  position: relative;
  border-top: 2px solid rgba(255,255,255,0.07);
}

.c32 tbody tr:hover {
  border-top: 2px solid rgba(0,0,0,0);
  background-color: #222C59;
}

.c32 tbody tr:hover:after {
  box-shadow: 0px 1px 10px 0px rgba(0,0,0,0.12),0px 4px 5px 0px rgba(0,0,0,0.14),0px 2px 4px -1px rgba(0,0,0,0.20);
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
}

.c32 tbody tr:hover + tr {
  border-top: 2px solid rgba(0,0,0,0);
}

.c38 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c41 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c39 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c40 {
  opacity: 1;
}

.c42 {
  opacity: 0.5;
}

.c47 {
  font-size: 14px;
  min-height: 100px;
}

.c20 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c33 {
  width: 90%;
}

.c33 > tbody > tr > td {
  vertical-align: middle;
}

.c19 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c16 {
  font-style: italic;
}

.c17 {
  line-height: normal;
}

.c3 {
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c5 {
  background: #344179;
}

.c31 {
  margin: 0 auto;
}

.c55 {
  background: rgba(255,255,255,0.07);
}

.c51 {
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2"
      width="100%"
    >
      <div
        class="c0 c3"
      >
        <div
          class="c4 c1 c5"
        >
          <div
            class="c0 c6"
          >
            <span
              class="c7"
              font-size="0"
              font-weight="bold"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <div
              class="c0 c8"
            >
              <div
                class="c9"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c10"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c0"
              >
                <div
                  class="c11"
                  kind="secondary"
                >
                  test
                </div>
              </div>
              <div
                class="c12"
              >
                for 
                2 days
                , starting 
                12/04/2020 at 12:00AM
              </div>
            </div>
          </div>
          <div
            class="c13 c14"
          >
            <div
              class="c15 c16 c17"
              font-size="0"
            >
              Request expires in 
              1 hour
            </div>
            <button
              class="c18"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c19"
          style="position: relative;"
        >
          <div
            class="c20"
          />
          <div
            class="c21 c6"
            style="position: relative;"
          >
            <div
              class="c22"
              style="display: flex;"
            >
              <span
                class="c23 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c0"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c24"
            style="position: relative;"
          >
            <div
              class="c25 c26"
            >
              <div
                class="c27"
              >
                Sam
              </div>
              <div
                class="c28"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c29"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
            <div
              class="c30 c31"
            >
              <table
                class="c32 c33"
              >
                <thead>
                  <tr>
                    <th
                      style="cursor: default;"
                    >
                      Cluster Name
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Kind
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Name
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      app-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      db
                    </td>
                    <td>
                      db-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      node
                    </td>
                    <td>
                      node-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      user_group
                    </td>
                    <td>
                      user-group-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      kube_cluster
                    </td>
                    <td>
                      kube-cluster-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      windows_desktop
                    </td>
                    <td>
                      windows-desktop-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      Some Friendly Name
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c34"
            style="position: relative;"
          >
            <div
              class="c25"
            >
              <div
                class="c35"
              >
                loggedInUsername
                 - add a review
              </div>
            </div>
            <div
              class="c29"
            >
              <div
                class="c36 c37"
              >
                <label
                  class="c38"
                >
                  <input
                    checked=""
                    class="c39"
                    name="DENIED"
                    type="radio"
                    value="DENIED"
                  />
                  <span
                    class="c40"
                  >
                    Reject request
                  </span>
                </label>
                <label
                  class="c38"
                >
                  <input
                    class="c39"
                    name="APPROVED"
                    type="radio"
                    value="APPROVED"
                  />
                  <span
                    class="c40"
                  >
                    Approve short-term access
                     (2 days)
                  </span>
                </label>
                <label
                  class="c41"
                >
                  <input
                    class="c39"
                    disabled=""
                    name="PROMOTED"
                    type="radio"
                    value="PROMOTED"
                  />
                  <span
                    class="c42"
                  >
                    <div
                      class="c0 c1"
                    >
                      <div
                        class="c0 c6"
                      >
                        <div
                          class="c43"
                        >
                          Approve long-term access via Access List with the requested resources
                        </div>
                      </div>
                    </div>
                  </span>
                </label>
              </div>
              <div
                class="c44"
              >
                <label
                  class="c45"
                  font-size="0"
                >
                  Message
                  <textarea
                    autocomplete="off"
                    class="c46 c47"
                    placeholder="Optional message..."
                  />
                </label>
              </div>
              <button
                class="c48"
                kind="primary"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c49"
    >
      <div
        class="c50 c1 c51"
      >
        <div
          class="c52"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c53 c54 c55"
      >
        <div
          class="c56"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c57"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c53 c54 c55"
      >
        <div
          class="c56"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c57"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c58"
      >
        <div
          class="c59"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;
